# BioRust

./: .gitignore  AI_IMPROVEMENTS.md  ANIMATION_SYSTEM_SUMMARY.md  CODEBASE_ANALYSIS.md  Cargo.toml  LOGGING_OPTIMIZATION.md  README.md  analyze_glb_animations.py  animation_summary.md  build.rs  export_animations_json.py  glb_animations.json
src/: ai_systems.rs  animation_systems.rs  building_ui.rs  collision.rs  combat_systems.rs  components.rs  constants.rs  debug_health.rs  entity_factory.rs  entity_state_systems.rs  game.rs  health_ui.rs  main.rs  model_loader.rs  model_showcase.rs  resource_ui.rs  resources.rs  rts_entities.rs  rts_systems.rs  rts_systems.rs.backup  seamless_texture.rs  systems.rs  terrain_v2.rs
src/ai/: combat_ai.rs  decision_making.rs  economy.rs  intelligence.rs  mod.rs  player_state.rs  resource_management.rs  scouting.rs  strategy.rs  tactics.rs  unit_management.rs
src/core/: ai_decision_cache.rs  ai_intervals.rs  components.rs  constants.rs  game.rs  mod.rs  query_cache.rs  resources.rs  spatial_grid.rs  time_controls.rs  unit_stats.rs
src/entities/: entity_factory.rs  entity_state_systems.rs  mod.rs  rts_entities.rs
src/rendering/: animation_systems.rs  hover_effects.rs  mod.rs  model_loader.rs  seamless_texture.rs
src/rts/: construction.rs  cursor_manager.rs  formation.rs  mod.rs  movement.rs  production.rs  resource_gathering.rs  selection.rs  unit_commands.rs  unstuck.rs  vision.rs
src/terrain/: mod.rs
src/ui/: building_panel.rs  button_styles.rs  icons.rs  mod.rs  placement.rs  resource_display.rs  team_building_panel.rs  team_selection.rs  tooltip.rs
src/world/: grid.rs  mod.rs  static_terrain.rs  systems.rs  terrain_v2.rs
