[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false
strip = false

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
bevy = { version = "0.15", features = ["jpeg", "trace"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
noise = "0.9"
hashbrown = "0.15"
bevy_animation = "0.15.0"
futures = "0.3"
tracing-subscriber = "0.3.20"
tracing-flame = "0.2.0"
